<resources>
    <string name="app_name">TimeSpace</string>


    <!-- choose language !-->
    <string name="kannad">ಕನ್ನಡ </string>
    <string name="english">English </string>
    <string name="next">Next </string>

    <string name="all">All </string>
    <string name="sports">Sports </string>
    <string name="events">Events </string>
    <string name="select_school">My School</string>
    <string name="insert_block">Insert Block</string>
    <string name="color">Color</string>
    <string name="tv_shared">Shared</string>
    <string name="enter">Enter </string>
    <string name="mobile">Mobile Number </string>
    <string name="enter_name">Enter Name </string>
    <string name="karnataka">Karnataka </string>
    <string name="district">District</string>
    <string name="town">Town</string>
    <string name="custom">Custom</string>
    <string name="morning_text">Good Morning</string>
    <string name="dummy_name">Krishna !</string>
    <string name="select_location">Select Location </string>
    <string name="town_name">Enter Town Name </string>
    <string name="month">It\'s Saturday</string>
    <string name="date">April 03</string>
    <string name="approval">Pending Approval</string>
    <string name="approved_note">Huraah!! you are approved.</string>
    <string name="validate_number">Validate Number</string>
    <string name="otp">Enter OTP</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="counting">00:19</string>
    <string name="event_time">All day</string>
    <string name="event_name">Diwali</string>
    <string name="num_date">15</string>
    <string name="day">Sunday</string>
    <string name="cal_month">April</string>
    <string name="validate_note">Now validate your registered mobile number using OTP.</string>
    <string name="many_attempts"> So many wrong attempts, kindly contact admin for help.</string>
    <string name="otp_note">You have received an OTP on your registered mobile number xxxxxxx367. It will expire after 10 minutes.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="my_space">My Space</string>
    <string name="datetime">Date and Time</string>
    <string name="myspace">My Space</string>
    <string name="todolist">To=do List</string>
    <string name="marketing">Marketing</string>
    <string name="mylink">My Links</string>
    <string name="shared">Shared</string>
    <string name="meetings">Meetings</string>
    <string name="reminders">Reminders</string>
    <string name="my_school">My School</string>
    <string name="my_community">My Community</string>
    <string name="add_title">Add Title</string>
    <string name="starts">Starts</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ends">Ends</string>
    <string name="start_date">16 January,2021</string>
    <string name="before">Before</string>
    <string name="minutes">Minutes</string>
    <string name="zero">00</string>
    <string name="end_date">20 January,2021</string>
    <string name="start_time">12:00 AM</string>
    <string name="end_time">11:59 PM</string>
    <string name="repeat">Repeat</string>
    <string name="repeats">Repeats</string>
    <string name="writing">Writing anything</string>
    <string name="repeaton">Repeats On</string>
    <string name="endson">Ends On</string>
    <string name="no_repeat">No Repeat</string>
    <string name="add_alerts">Add Alerts</string>
    <string name="alerts">Alerts</string>
    <string name="alert_time">Before 15 minute(s)</string>
    <string name="tags">Tags</string>
    <string name="add_details">Add Details</string>
    <string name="select_space">Select Space</string>
    <string name="tvspace">Spaces</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="searched_names">Krishna, Amit</string>
    <string name="name">Pulkit</string>
    <string name="invite">Invite</string>
    <string name="search_text">Type name or number to search...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_msg">enter title.</string>
    <string name="detail_msg">enter details.</string>
    <string name="start_date_msg">select valid start date.</string>
    <string name="end_date_msg">select valid end date.</string>
    <string name="end_time_msg">select valid end time.</string>
    <string name="start_time_msg">select valid start time.</string>

    <string name="settings_calendars">Calendars</string>
    <string name="hindi_panchanga">Hindi Panchanga</string>
    <string name="settings_admincenter">Admin Center</string>
    <string name="settings_notifications">Notifications</string>
    <string name="settings_account">Account</string>
    <string name="settings_profile">Profile</string>
    <string name="choose_icon">Choose Icon</string>
    <string name="settings_feedback">Feedback</string>
    <string name="settings_invite">Invite Friends</string>
    <string name="local_events">Local Events Calendar</string>
    <string name="govt_holiday">Government Holiday</string>
    <string name="calendar_category">Select Calendar Category </string>
    <string name="startweek">Start Week</string>
    <string name="change_number">Change Number</string>
    <string name="change_location">Change Location</string>
    <string name="calendar_sync">Calendar Sync</string>
    <string name="delete_account">Delete Account</string>
    <string name="old_mobile_number">Old Mobile Number</string>
    <string name="new_mobile_number">New Mobile Number</string>
    <string name="submit">Submit</string>
    <string name="add_feedback">Add Feedback</string>
    <string name="add_name">Add Name</string>
    <string name="add_mobile">Add Mobile Number</string>
    <string name="invite1">Invite</string>
    <string name="account_delete_msg">All your data online/offline will be deleted.</string>
    <string name="approval_center">Approval Center</string>
    <string name="subscription_manager">Subscription Manager</string>
    <string name="cancelled" />
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="plain_text">Plain Text</string>
    <string name="divider">Divider</string>
    <string name="new_page">New Page</string>
    <string name="h1">Heading 1</string>
    <string name="h2">Heading 2</string>
    <string name="checkbox">Checkbox List</string>
    <string name="bulleted_list">Bulleted List</string>
    <string name="numbered_list">Numbered List</string>
    <string name="text_default">Default</string>
    <string name="text_color">Text Color</string>
    <string name="text_gray">Gray</string>
    <string name="text_blue">Blue</string>
    <string name="text_red">Red</string>
    <string name="text_green">Green</string>
    <string name="text_yellow">Yellow</string>
    <string name="background_color">Background Color</string>
    <string name="defualt_color">Default</string>
    <string name="bg_color_gray">Gray</string>
    <string name="bg_color_blue">Blue</string>
    <string name="bg_color_red">Red</string>
    <string name="bg_color_yellow">Yellow</string>
    <string name="weekly">Weekly</string>
    <string name="never">Never</string>
    <string name="monday">Monday</string>
    <string name="tv_panchanga">Panchanga</string>
    <string name="tv_local_events">Local events</string>
    <string name="my_events">My events</string>
    <string name="my_calendar">My Calendar</string>
    <string name="untitled">Untitled</string>
    <string name="write_anything">Write Anything</string>
    <string name="music">Music</string>
    <string name="holiday">Holiday</string>
    <string name="valid_till">Account Valid till</string>

</resources>