<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GoodMorningActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">


        <ImageView
            android:id="@+id/icon"
            android:layout_width="94dp"
            android:layout_height="94dp"
            android:scaleType="fitXY"
            android:src="@drawable/icon1"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="42dp"
            android:layout_marginLeft="42dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/morning_text"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/icon" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="42dp"
            android:layout_marginLeft="42dp"
            android:fontFamily="@font/roboto"
            android:text="@string/dummy_name"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_text" />

        <TextView
            android:id="@+id/tv_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="42dp"
            android:layout_marginLeft="42dp"
            android:layout_marginTop="26dp"
            android:fontFamily="@font/roboto"
            android:text="@string/month"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_name" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="42dp"
            android:layout_marginLeft="42dp"
            android:fontFamily="@font/roboto"
            android:text="@string/date"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_week" />


        <TextView
            android:id="@+id/tv_approval_done"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="345dp"
            android:fontFamily="@font/roboto"
            android:text="@string/approved_note"
            android:textColor="@color/pink"
            android:textSize="20sp"
            android:alpha="0.6"
            android:gravity="center_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_verification_note"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="46dp"
            android:layout_marginLeft="42dp"
            android:layout_marginTop="385dp"
            android:layout_marginEnd="46dp"
            android:textAlignment="textStart"
            android:gravity="center_horizontal"
            android:layout_marginRight="46dp"
            android:fontFamily="@font/roboto"
            android:text="@string/validate_note"
            android:textColor="@color/purple_500"
            android:textSize="19sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlCompat" />

        <Button
            android:id="@+id/btn_validate"
            android:layout_width="177dp"
            android:layout_height="42dp"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:background="@drawable/button_shape"
            android:text="@string/validate_number"
            android:textAllCaps="false"
            android:paddingBottom="10dp"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_verification_note" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>