<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".all_spaces.SelectSpaceActivity">
    <ImageView
        android:id="@+id/iv_cross"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:src="@drawable/cross"
        android:layout_alignParentRight="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_select_space"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:fontFamily="@font/roboto"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_marginTop="36dp"
        android:layout_centerHorizontal="true"
        android:text="@string/settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_cross" />

    <View
        android:id="@+id/view_settings"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/tv_select_space"
        android:layout_marginTop="25dp"
        android:background="@color/divider_gray" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tv_select_space"
        android:layout_marginTop="38dp">


            <LinearLayout
                android:id="@+id/ll_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:orientation="vertical"
           >


                <TextView
                    android:id="@+id/tv_admincenter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/settings_admincenter"
                    android:textColor="@color/black"
                    android:padding="20dp"
                    android:textSize="20sp" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_below="@+id/tv_select_space"
                    android:layout_marginTop="20dp"
                    android:background="@color/divider_gray" />
                <TextView
                    android:id="@+id/tv_calendars"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/settings_calendars"
                    android:textColor="@color/black"
                    android:padding="20dp"
                    android:layout_marginTop="20dp"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_notification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/settings_notifications"
                    android:textColor="@color/black"
                    android:padding="20dp"
                    android:textSize="20sp" />
                <TextView
                    android:id="@+id/tv_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/settings_account"
                    android:textColor="@color/black"
                    android:padding="20dp"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/settings_profile"
                    android:textColor="@color/black"
                    android:padding="20dp"
                    android:textSize="20sp" />
                <TextView
                    android:id="@+id/tv_feedback"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/settings_feedback"
                    android:textColor="@color/black"
                    android:padding="20dp"
                    android:textSize="20sp" />
                <View
                    android:id="@+id/view_settings1"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/divider_gray"/>
                <TextView
                    android:id="@+id/tv_invitefriends"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/settings_invite"
                    android:textColor="@color/pink"
                    android:padding="30dp"
                    android:textSize="20sp" />

            </LinearLayout>




    </ScrollView>

    <LinearLayout
        android:id="@+id/ll_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingTop="5dp">
        <include layout="@layout/bottom_buttons" />
    </LinearLayout>

</RelativeLayout>